Try with an enter button and full screen.

--- a/accelerometer/demo.html
+++ b/accelerometer/demo.html
@@ -1,4 +1,7 @@
-<div id="content">
+<div id="splash" style="display:block;">
+<img src="http://orig11.deviantart.net/3404/f/2007/275/f/d/enter_button_green_by_yiangos.gif" onclick="main_enter()">
+</div>
+<div id="content" style="display:none;">
     <h1>Accelerometer Javascript Test</h1>
     <div id="sphere"></div>
 <ul>
